--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -8,3 +8,23 @@ Pos=650,20
 Size=550,680
 Collapsed=0
 
+[Window][ImGui Demo]
+Pos=182,101
+Size=1071,840
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Console]
+Pos=152,176
+Size=520,600
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=74,51
+Size=617,714
+Collapsed=0
+
