--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -9,7 +9,7 @@ Size=550,680
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=182,101
+Pos=451,221
 Size=1071,840
 Collapsed=0
 
@@ -27,4 +27,17 @@ Collapsed=0
 Pos=74,51
 Size=617,714
 Collapsed=0
+
+[Window][ImGui Metrics]
+Pos=60,60
+Size=402,251
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Docking][Data]
+DockSpace ID=0xFA06BC56 Pos=0,19 Size=1280,701 CentralNode=1
 
